test/features/errors/codegen/e2006_failed_build_call.spl
# E2006: Failed to Build Call

Feature: E2006 - Failed to Build Call Instruction
  As a Simple compiler
  I want to detect failures in building call instructions
  So that internal compiler errors are reported

  Background:
    Given I have the Simple compiler

  Scenario: Call instruction build failure
    When I compile with codegen:
      '''
      fn test():
        # Code that triggers call instruction failure
        problematic_call()
      '''
    Then I should see error E2006
    And the error message should be "failed to build call instruction"
    And the label should indicate "codegen failed here"
    And the help should suggest "this is an internal compiler error, please report it"

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile with codegen:
      '''
      fn test():
        problematic_call()
      '''
    Then I should see error E2006
    And the error message should contain "호출 명령 빌드 실패"
